# NetworkEngine-old-

./: CMakeLists.txt  README.md  RFC.md  test.cpp
.github/workflows/: buildlinux.yml  release.yml
NetworkEngine/: CMakeLists.txt  NetworkEngine.md  ProjectInfo.cpp  Uniti.cpp  Uniti.hpp
NetworkEngine/Event/: CMakeLists.txt  Event.md  EventManager.cpp  EventManager.hpp  sendEventManager.cpp  sendEventManager.hpp
NetworkEngine/Object/: CMakeLists.txt  Object.cpp  Object.hpp  Object.md  ObjectManager.cpp  ObjectManager.hpp
NetworkEngine/Object/Transform/: CMakeLists.txt  Position.cpp  Position.hpp  Rotation.cpp  Rotation.hpp  Scale.cpp  Scale.hpp  Transform.cpp
NetworkEngine/Script/: CMakeLists.txt  Script.md  ScriptFactory.hpp  ScriptManager.hpp
NetworkEngine/Time/: CMakeLists.txt  Clock.cpp  Clock.hpp  Time.md
NetworkEngine/User/: AUser.cpp  AUser.hpp  CMakeLists.txt  IUser.hpp  User.md  UserManager.cpp  UserManager.hpp
Scripts/: BasicEnemy.cpp  BasicEnemy.hpp  CMakeLists.txt  EnemiesHandler.cpp  EnemiesHandler.hpp  Entity.cpp  Entity.hpp  Missile.cpp  Missile.hpp  UserController.cpp  UserController.hpp  VesselAlly.cpp  VesselAlly.hpp  VesselHeal.cpp  VesselHeal.hpp  VesselWeapon.cpp  VesselWeapon.hpp  movementVessel.cpp  movementVessel.hpp
Scripts/Enemies/: BasicEnemy.cpp  BasicEnemy.hpp  Boss.cpp  Boss.hpp  CMakeLists.txt  EnemiesHandler.cpp  EnemiesHandler.hpp  Kamikaze.cpp  Kamikaze.hpp  Sniper.cpp  Sniper.hpp  Tank.cpp  Tank.hpp
json/: project.json  publicScene.json
src/: CMakeLists.txt  ProjectInfo.cpp  ProjectInfo.hpp  Uniti.cpp  Uniti.hpp  User.cpp  User.hpp  index.cpp
src/Event/: EventManager.cpp  EventManager.hpp
src/Object/: Object.cpp  Object.hpp  ObjectManager.cpp  ObjectManager.hpp
src/Object/Transform/: Position.cpp  Position.hpp  Rotation.cpp  Rotation.hpp  Scale.cpp  Scale.hpp  Transform.cpp  Transform.hpp
src/Script/: IScript.hpp  ScriptFactory.cpp  ScriptManager.cpp  ScriptManager.hpp
src/User/: AUser.cpp  AUser.hpp  IUser.hpp  UserManager.cpp  UserManager.hpp
